# Humanoid-Robotics-Book

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
.claude/: settings.local.json
.specify/: style_guide.md
.specify/memory/: constitution.md
.specify/templates/: chapter-template.mdx
examples/module1_lab/ros2_arm_control/: package.xml  setup.py
examples/module1_lab/ros2_arm_control/launch/: arm_control.launch.py
examples/module1_lab/ros2_arm_control/ros2_arm_control/: __init__.py  arm_client.py  arm_controller.py
examples/module1_lab/ros2_arm_control/urdf/: humanoid_arm.urdf
examples/module3_lab/isaac_perception/: __init__.py  package.xml  setup.py
examples/module3_lab/isaac_perception/config/: nav2_humanoid.yaml
examples/module3_lab/isaac_perception/isaac_perception/: humanoid_env.py  lab_exercise.py  vslam_node.py
examples/module3_lab/isaac_perception/scenes/: training_scene.usd
examples/module4_capstone/vla_robot/: package.xml  setup.py
examples/module4_capstone/vla_robot/vla_robot/: llm_planner_node.py  main.py  main_integration.py  multi_modal_node.py  whisper_node.py
history/prompts/001-humanoid-robotics-book/: 0001-create-book-specification.spec.prompt.md  0002-develop-book-plan-phase-0-complete.plan.prompt.md  0003-create-development-tasks.tasks.prompt.md  0004-research-ros2-installation-best-practices.red.prompt.md  0005-research-urdf-creation-for-humanoid-robots.red.prompt.md  0006-research-gazebo-simulation-setup.red.prompt.md  0007-research-nvidia-isaac-sim-setup.red.prompt.md
history/prompts/constitution/: 0001-update-project-constitution-with-detailed-guidelines.constitution.prompt.md
history/prompts/general/: 001-user-greeting.general.prompt.md
references/: benchmarks.json  references.bib
research/: gazebo_simulation_setup.md  nvidi-isaac_sim_setup.md  ros2_installation_best_practices.md  urdf_humanoid_robot_creation.md
specs/001-humanoid-robotics-book/: plan.md  research.md  spec.md  tasks.md
specs/001-humanoid-robotics-book/checklists/: requirements.md
tools/: consistency_checker.py  consistency_review.py  fix_front_matter.py  format_consistency_check.py  validate_code_examples.py
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tsconfig.json
website/docs/: intro.md
website/docs/module1/: chapter1.mdx  (+6 more)
(+27 files in other folders)
